# AnchorDETR_TRT_Hackathon

./: .gitignore  README.md
AnchorDETR/: export_onnx.py  main.py
AnchorDETR/util/: misc.py
Docker/: Dockerfile  build.sh  docker-compose.yml
Model/: download
Trt/: CMakeLists.txt  LayerNormKernel.cuh  LayerNormPlugin.cu  LayerNormPlugin.h  TrtExec.cpp  profileModel.py  surgeonModel.py
Trt/include/: Utils.h  common.h
